config.yml change

--- a/_config.yml
+++ b/_config.yml
@@ -27,3 +27,6 @@ minima:
 # remote_theme: pages-themes/time-machine@v0.2.0
 plugins:
   - jekyll-remote-theme
+liquid:
+  error_mode: lax
+  exclude_files: ["_posts/**/*.md"]
